--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"cypress": "cypress open"
 	},
 	"dependencies": {
+		"@emotion/react": "11.9.3",
+		"@emotion/styled": "11.9.3",
 		"@mui/material": "5.8.7",
+		"@mui/icons-material": "5.8.4",
 		"next": "12.2.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -20,6 +24,7 @@
 		"@types/node": "18.0.3",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
+		"cypress": "^10.3.0",
 		"eslint": "8.19.0",
 		"eslint-config-next": "12.2.0",
 		"typescript": "4.7.4",
